@@ -94,8 +94,6 @@ public class PaladinSkill extends StdAbility
 	@Override
 	public boolean autoInvocation(MOB mob, boolean force)
 	{
-		if((!force) && (CMSecurity.isASysOp(mob) || CMSecurity.isAllowedEverywhere(mob, CMSecurity.SecFlag.ALLSKILLS)))
-			return false;
 		return super.autoInvocation(mob, force);
 	}
 }
