@@ -160,8 +160,6 @@ public class Prayer_AuraStrife extends Prayer
 	@Override
 	public boolean autoInvocation(MOB mob, boolean force)
 	{
-		if((!force) && (CMSecurity.isASysOp(mob) || CMSecurity.isAllowedEverywhere(mob, CMSecurity.SecFlag.ALLSKILLS)))
-			return false;
 		return super.autoInvocation(mob, force);
 	}
 }
