@@ -121,8 +121,6 @@ public class Thief_SenseLaw extends ThiefSkill
 	@Override
 	public boolean autoInvocation(MOB mob, boolean force)
 	{
-		if((!force) && (CMSecurity.isASysOp(mob) || CMSecurity.isAllowedEverywhere(mob, CMSecurity.SecFlag.ALLSKILLS)))
-			return false;
 		return super.autoInvocation(mob, force);
 	}
 }
