@@ -356,6 +356,7 @@ public class CMProps extends Properties
 		RACIAL_CATEGORY_IS_INSECT,
 		RACIAL_CATEGORY_IS_VERMIN,
 		RACIAL_CATEGORY_IS_VEGETATION,
+		WIZ_NOAUTOINVOKE,
 		TECH_LEVEL_NAMES,
 		TECH_BABBLE_VERBS,
 		TECH_BABBLE_ADJ1,
