@@ -1344,6 +1344,9 @@ RACIAL_CATEGORY_IS_VERMIN=Insect, Rodent, Worm, Arachnid
 # Racial categories that you would call "Vegetation"
 RACIAL_CATEGORY_IS_VEGETATION=Vegetation
 
+WIZ_NOAUTOINVOKE=Prayer_AuraStrife, Thief_SenseLaw, Ranger_Enemy1, Ranger_Enemy2, Ranger_Enemy3, \
+Ranger_Enemy4, Paladin_Aura, Paladin_Courage, Paladin_DiseaseImmunity, Paladin_Goodness, Paladin_ImprovedResists, \
+Paladin_PaladinsMount, Paladin_PoisonImmunity, Paladin_Purity
 
 # Techno babble words
 TECH_BABBLE_VERBS=\
